# ai-log-analysis

./: README.md  configs.json  docker-compose.yml  pyproject.toml
ai_log_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chatbot/: __init__.py  anthropic.py  chat_api.py  chatbot.py  config_manager.py  configuration.py  embeddings.py  qdrant.py
chatbot/models/: anthropic.py  embeddings.py  langfuse.py
embed/: embedded_api.py
