[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_log_analysis"
version = "0.1.0"
description = "AI Log Analysis Tool"
authors = [{ name = "Domenic Nguyen", email = "thanhdomenic.nguyen@gmail.com" }]
dependencies = [
    "elasticsearch",
    "qdrant-client",
    "sentence-transformers",
    "langchain-core",
    "langchain-anthropic",
    "anthropic",
    "fastapi",
    "uvicorn",
    "langfuse",
    "langchain",
    "nest_asyncio"
]

[tool.setuptools]
packages = ["chatbot", "embed"]
